kubernetes/k3s-01/workloads/wger/stateful-set-nginx.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: wger-nginx
  namespace: wger
spec:
  replicas: 0
  selector:
    matchLabels:
      app: wger-nginx
  template:
    metadata:
      labels:
        app: wger-nginx
    spec:
      containers:
        - name: wger-nginx
          image: docker.io/library/nginx:1.29.5@sha256:341bf0f3ce6c5277d6002cf6e1fb0319fa4252add24ab6a0e262e0056d313208
          volumeMounts:
            - name: wger-media
              mountPath: /usr/share/nginx/html/media/
            - name: wger-static
              mountPath: /usr/share/nginx/html/static/
      volumes:
        - name: wger-media
          persistentVolumeClaim:
            claimName: wger-media
        - name: wger-static
          persistentVolumeClaim:
            claimName: wger-static
