kubernetes/k3s-01/workloads/wger/stateful-set.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: wger
  namespace: wger
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wger
  template:
    metadata:
      labels:
        app: wger
    spec:
      containers:
        - name: wger
          image: docker.io/wger/server:2.7.0@sha256:1c5789b93bfe5eed0b7287255782d9177027b255de2b22b59f511a693a48db04
          volumeMounts:
            - name: wger-media
              mountPath: /home/wger/media/
            - name: wger-static
              mountPath: /home/wger/static/
      volumes:
        - name: wger-media
          persistentVolumeClaim:
            claimName: wger-media
        - name: wger-static
          persistentVolumeClaim:
            claimName: wger-static
