kubernetes/k3s-01/workloads/wger/ingress-route.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: wger
  namespace: wger
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`wger.47fc5c.com`) && (PathPrefix(`/media`) || PathPrefix(`/static`))
      kind: Rule
      middlewares:
        - namespace: wger
          name: wger-ipallowlist
      services:
        - name: wger-nginx
          kind: Service
          port: 80
          scheme: http
          sticky:
            cookie:
              httpOnly: true
              secure: true
              sameSite: none
    - match: Host(`wger.47fc5c.com`)
      kind: Rule
      middlewares:
        - namespace: wger
          name: wger-ipallowlist
      services:
        - name: wger
          kind: Service
          port: 8000
          scheme: http
          sticky:
            cookie:
              httpOnly: true
              secure: true
              sameSite: none
  tls:
    secretName: wger-certificate
